--- a/online-zoo/assets/styles/normalize.css
+++ b/online-zoo/assets/styles/normalize.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -66,6 +70,8 @@ pre {
 
 a {
   background-color: transparent;
+  text-decoration: none;
+  color: inherit;
 }
 
 abbr[title] {
@@ -208,4 +214,19 @@ template {
 
 [hidden] {
   display: none;
+}
+
+.container {
+  max-width: 1580px;
+  padding: 0 220px;
+  margin: 0 auto;
+}
+
+ul,
+li,
+ol,
+dl {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
