--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -4,7 +4,7 @@
   text-transform: uppercase;
   text-align: center;
   width: 298px;
-  height: 42px;
+  height: 54px;
   outline: none;
   border: none;
   color: #fff;
@@ -169,7 +169,8 @@
 .pets__slider {
   margin: 0 auto 80px;
   display: grid;
-  grid-template-columns: repeat(3, 3fr);
+  max-width: 1158px;
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px 20px;
   position: relative;
 }
@@ -186,7 +187,7 @@
 }
 
 .slider-item__inner {
-  padding: 4px 12px 14px 16px;
+  padding: 4px 16px 14px 16px;
   display: grid;
   grid-template-columns: auto 33px;
   grid-template-rows: 16px 15px;
@@ -200,7 +201,6 @@
 }
 
 .slider-item__icon {
-  content: url('../../assets/icons/pets/banana-bamboo_icon.svg');
   grid-row: span 2;
 }
 
@@ -218,14 +218,14 @@
 /* Цветы(картинки по бокам) для секции Pets */
 .pets::before {
   position: absolute;
-  content: url('../../assets/images/pets/pets-flowers-green.png');
+  content: url("../../assets/images/pets/pets-flowers-green.png");
   bottom: 0;
   left: 0;
 }
 
 .pets::after {
   position: absolute;
-  content: url('../../assets/images/pets/pets-flowers-yellow.png');
+  content: url("../../assets/images/pets/pets-flowers-yellow.png");
   bottom: 0;
   right: 0;
 }
@@ -237,18 +237,93 @@
   transform: translateY(50%);
 }
 
-.pets-slider__arrow:hover  {
+.pets-slider__arrow:hover {
   cursor: pointer;
 }
 
 .arrow-left {
-  content: url('../../assets/icons/pets/slider-arrow-left.svg');
+  content: url("../../assets/icons/pets/slider-arrow-left.svg");
   left: -82px;
   bottom: 50%;
 }
 
 .arrow-right {
-  content: url('../../assets/icons/pets/slider-arrow-right.svg');
+  content: url("../../assets/icons/pets/slider-arrow-right.svg");
   right: -71px;
   bottom: 50%;
 }
+
+/* HOW IT WORKS */
+
+.how-it-works {
+  padding: 69px 220px 100px 220px;
+  background: linear-gradient(
+    315.75deg,
+    rgba(254, 210, 144, 0.7) 30.06%,
+    #febdab 100.95%,
+    rgba(254, 210, 144, 0.7) 106.36%
+  );
+}
+
+.how-it-works > .container {
+  background: rgba(253, 253, 255, 0.52);
+  border-radius: 20px;
+  padding: 41px 60px 51px 99px;
+  color: var(--black-blue);
+}
+
+.how-it-works__title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 120%;
+  color: #fe9013;
+  margin-bottom: 30px;
+}
+
+.how-it-works__subtitle {
+  font-size: 24px;
+  line-height: 120%;
+  margin-bottom: 40px;
+}
+
+.how-it-works__text {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 130%;
+  margin-bottom: 10px;
+}
+
+.how-it-works__description {
+  max-width: 863px;
+  margin-bottom: 60px;
+}
+
+.how-it-works__description > .how-it-works__description-link {
+  border-bottom: 1px solid var(--orange);
+}
+
+.widgets-title {
+  text-align: center;
+  padding-bottom: 40px;
+  font-size: 36px;
+}
+
+.widgets {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-right: 39px;
+  margin-bottom: 60px;
+}
+
+.widget-arrow {
+  align-self: baseline;
+  padding-top: 61px;
+}
+
+.how-it-works__button {
+  text-align: center;
+  margin: 0 auto;
+  padding: 16px 0;
+}
+
