--- a/online-zoo/pages/style.css
+++ b/online-zoo/pages/style.css
@@ -40,7 +40,7 @@
 
 .logo::after {
   position: absolute;
-  content: url(../../assets/icons/logo-icon.svg);
+  /* content: url(../../assets/icons/logo-icon.svg); */
   left: 10px;
   top: 19px;
 }
