--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -90,7 +90,7 @@
 /* FAVORITE */
 
 .favorite {
-  background-image: url(../../assets/images/favorite/Giant\ Panda.png);
+  background-image: url("./assets/images/favorite/Giant\ Panda.png");
   background-size: cover;
   height: 700px;
   margin: 0 auto;
@@ -106,7 +106,7 @@
 }
 
 .favorit__bcg-circle {
-  background-image: url(../../assets/images/favorite/Ellipse-online.png);
+  background-image: url("./assets/images/favorite/Ellipse-online.png");
   position: absolute;
   top: -74px;
   left: 587px;
@@ -178,7 +178,7 @@
 
 .backstage__flowers {
   position: absolute;
-  content: url("../../assets/images/backstage/backstage-flowers.png");
+  content: url("./assets/images/backstage/backstage-flowers.png");
   right: 0;
   top: 12px;
 }
@@ -242,14 +242,14 @@
 /* Цветы(картинки по бокам) для секции Pets */
 .pets::before {
   position: absolute;
-  content: url("../../assets/images/pets/pets-flowers-green.png");
+  content: url("./assets/images/pets/pets-flowers-green.png");
   bottom: 0;
   left: 0;
 }
 
 .pets::after {
   position: absolute;
-  content: url("../../assets/images/pets/pets-flowers-yellow.png");
+  content: url("./assets/images/pets/pets-flowers-yellow.png");
   bottom: 0;
   right: 0;
 }
@@ -266,13 +266,13 @@
 }
 
 .arrow-left {
-  content: url("../../assets/icons/pets/slider-arrow-left.svg");
+  content: url("./assets/icons/pets/slider-arrow-left.svg");
   left: -82px;
   bottom: 50%;
 }
 
 .arrow-right {
-  content: url("../../assets/icons/pets/slider-arrow-right.svg");
+  content: url("./assets/icons/pets/slider-arrow-right.svg");
   right: -71px;
   bottom: 50%;
 }
@@ -430,7 +430,7 @@
 
 .item-user__date::before {
   position: absolute;
-  content: url("../../assets/icons/testemonials/item-user-dot.svg");
+  content: url("./assets/icons/testemonials/item-user-dot.svg");
   left: -11px;
   top: -15%;
 }
@@ -487,7 +487,7 @@
 
 .testimonials::after {
   position: absolute;
-  content: url("../../assets/images/testemonials/testemonials-img.png");
+  content: url("./assets/images/testemonials/testemonials-img.png");
   right: 0;
   bottom: -151px;
 }
@@ -566,16 +566,16 @@
 }
 
 .footer-contacts__link.facebook::after {
-  content: url("../../assets/icons/footer/facebook.svg");
+  content: url("./assets/icons/footer/facebook.svg");
 }
 .footer-contacts__link.twitter::after {
-  content: url("../../assets/icons/footer/twitter.svg");
+  content: url("./assets/icons/footer/twitter.svg");
 }
 .footer-contacts__link.instagram::after {
-  content: url("../../assets/icons/footer/instagram.svg");
+  content: url("./assets/icons/footer/instagram.svg");
 }
 .footer-contacts__link.youtube::after {
-  content: url("../../assets/icons/footer/youtube.svg");
+  content: url("./assets/icons/footer/youtube.svg");
 }
 
 .footer-navbar {
