--- a/online-zoo/assets/styles/normalize.css
+++ b/online-zoo/assets/styles/normalize.css
@@ -32,29 +32,29 @@ h1 {
   line-height: 80%;
 }
 h2 {
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 120%;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 120%;
 }
 h3 {
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 130%;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 130%;
 }
 h4 {
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 120%;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
 }
 h5 {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 140%;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
 }
 h6 {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 140%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
 }
 
 hr {
@@ -221,12 +221,29 @@ template {
   margin: 0 auto;
 }
 
+@media (max-width: 1001px) {
+  .container {
+    max-width: 940px;
+  }
+}
+
+@media (max-width: 641px) {
+  .container {
+    max-width: 640px;
+    padding: 0 34px 0 21px;
+  }
+}
+
+@media (max-width: 999px) {
+  .container {
+    max-width: 940px;
+  }
+}
 
 p {
   margin: 0;
   padding: 0;
 }
-
 
 ul,
 li,
