--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -40,6 +40,7 @@
 
 .logo::after {
   position: absolute;
+  content: url("./assets/icons/logo-icon.svg");
   left: 10px;
   top: 19px;
 }
@@ -52,6 +53,10 @@
   font-size: 16px;
   line-height: 140%;
   color: #fff;
+}
+
+.burger-menu-button {
+  display: none;
 }
 
 .header__inner {
@@ -104,7 +109,7 @@
   position: relative;
 }
 
-.favorit__bcg-circle {
+.favorite__bcg-circle {
   background-image: url("./assets/images/favorite/Ellipse-online.png");
   position: absolute;
   top: -74px;
@@ -596,4 +601,9 @@
   width: calc(396 / 1160 * 100%);
   margin-bottom: 8px;
   line-height: 31px;
+}
+
+/* ДЛЯ АДАПТИВА КЛАССЫ ДЛЯ ФУТЕРА */
+.footer-wrapper__tablet-contacts {
+  display: none;
 }
