--- a/online-zoo/media.css
+++ b/online-zoo/media.css
@@ -14,7 +14,7 @@
   .favorite__title {
     font-size: 85px;
   }
-  .favorit__bcg-circle {
+  .favorite__bcg-circle {
     left: 456px;
     width: 367px;
     height: 367px;
@@ -279,5 +279,211 @@
   }
   .footer__button {
     margin-bottom: 67px;
+  }
+}
+
+@media (max-width: 321px) {
+  .favorite {
+    overflow: hidden;
+    background-image: url("./assets/images/media/Giant-Panda.png");
+    height: 187px;
+    padding: 0;
+  }
+  .favorite__title {
+    font-size: 28px;
+    margin-top: 42px;
+    width: 128px;
+    margin-bottom: 43px;
+  }
+  .favorite__bcg-circle {
+    left: 156px;
+    width: 119px;
+    height: 119px;
+    top: 23px;
+  }
+  .button.favorite__btn {
+    display: none;
+  }
+  .button.favorite__btn-mobile {
+    display: block;
+    margin: 0 auto;
+    margin: 20px auto 30px auto;
+  }
+  .backstage {
+    padding: 0;
+  }
+  .backstage__info {
+    width: auto;
+  }
+  .backstage__info-title {
+    font-size: 24px;
+    width: 300px;
+    margin-bottom: 10px;
+  }
+  .backstage__info-title-text {
+    margin-bottom: 20px;
+  }
+  .backstage__info-subtitle {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .backstage__info-title-text,
+  .backstage__info-subtitle-text {
+    width: 297px;
+  }
+  .backstage__flowers {
+    content: url("./assets/images/media/backstage-mobile.svg");
+    top: -67px;
+  }
+  .backstage__info-subtitle-text {
+    margin-bottom: 40px;
+  }
+  .pets {
+    padding-bottom: 60px;
+  }
+  .pets .container {
+    width: 285px;
+    margin: 0;
+  }
+  .slider-item {
+    width: 285px;
+  }
+  .slider-item__img {
+    width: 283px;
+    height: 285px;
+  }
+  .pets__slider {
+    gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 20px;
+  }
+  .arrow-right,
+  .arrow-left {
+    display: none;
+  }
+  .pets::before {
+    content: url("./assets/images/media/pets_mobile_palm.png");
+  }
+  .pets::after {
+    content: url("./assets/images/media//pets-mobile-flowers.png");
+  }
+  .how-it-works {
+    padding: 20px 11px 20px 10px;
+    margin-bottom: 30px;
+  }
+  .how-it-works .container {
+    padding: 20px 0px 40px 0px;
+    text-align: center;
+  }
+  .how-it-works__title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    width: 232px;
+    display: inline-block;
+  }
+  .how-it-works__subtitle {
+    font-size: 18px;
+    display: inline-block;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 249px;
+    font-weight: 400;
+    line-height: 120%;
+  }
+  .how-it-works__text,
+  .how-it-works__description {
+    display: none;
+  }
+  .how-it-works__widgets-title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    padding: 0;
+  }
+  .widgets {
+    flex-direction: column;
+    gap: 20px;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .widget-card,
+  .widget-payment,
+  .widget-result {
+    height: 231px;
+    align-self: center;
+  }
+  .widgets::after {
+    transform: rotate(90deg);
+    top: 189px;
+    right: -131px;
+  }
+  .widgets::before {
+    transform: rotate(90deg);
+    right: 14px;
+    top: 439px;
+  }
+  .testimonials {
+    padding: 0;
+  }
+  .testimonials__title {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  .item-user {
+    grid-template-columns: 31px auto auto;
+  }
+  .testimonials__item {
+    padding-top: 10px;
+  }
+  .testemonials__button {
+    width: 240px;
+    height: 54px;
+    margin-bottom: 60px;
+  }
+  .testimonials::after {
+    content: url("./assets/images/media/mobile-testimonials.svg");
+    bottom: -34px;
+  }
+  .footer {
+    padding: 20 13px 20 9px;
+  }
+  .footer .container {
+    padding: 0 13px 0 9px;
+  }
+
+  .footer__logo.logo {
+    border: none;
+    width: auto;
+    height: 23px;
+    font-size: 19px;
+    display: inline-block;
+    margin: 0 auto;
+  }
+  .footer__logo.logo::after {
+    left: 78px;
+    top: 1px;
+  }
+  .footer-wrapper__tablet-contacts {
+    flex-direction: row;
+    right: 50%;
+    transform: translateX(50%);
+    top: 150%;
+    gap: 30px;
+  }
+  .footer__inner {
+    flex-direction: column;
+  }
+  .footer-navbar {
+    order: 1;
+    font-size: 16px;
+  }
+  .footer__button {
+    margin: 50px 0 30px 0;
+  }
+  .footer-navbar__items {
+    gap: 30px;
+  }
+
+  .footer-copy {
+    margin-bottom: 30px;
   }
 }
