--- a/online-zoo/media.css
+++ b/online-zoo/media.css
@@ -1,4 +1,68 @@
+@media (max-width: 1356px) {
+  .arrow-right {
+    right: 34%;
+    bottom: 50%;
+    transform: translateY(8%);
+  }
+  .arrow-left {
+    left: 34%;
+    bottom: 50%;
+    transform: translateY(8%);
+  }
+  .pets__slider {
+    gap: 92px 20px;
+  }
+}
+
+@media (max-width: 1154px) {
+  .favorite__bcg-circle {
+    width: 400px;
+    height: 400px;
+  }
+  .slider-item__img {
+    width: 300px;
+  }
+}
 @media (max-width: 1001px) {
+  .mobile-menu {
+    background-color: #fff;
+    text-align: left;
+    color: #333b41;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    min-height: 329px;
+    padding: 10px;
+    position: absolute;
+    top: -500px;
+    width: 100%;
+    z-index: 1001 !important;
+    transition: all 0.3s;
+  }
+  .mobile-menu__logo {
+    color: #fe9013;
+    border-color: rgba(254, 144, 19, 1);
+    margin-bottom: 30px;
+    font-size: 15px;
+    line-height: 120%;
+    padding: 3px;
+    width: 65px;
+    height: 41px;
+  }
+  .mobile-menu__logo::after {
+    position: absolute;
+    content: url("./assets/icons/logo-header-mobile.svg");
+    left: 8px;
+    top: 19px;
+  }
+  .mobile-menu__link {
+    font-size: 22px;
+  }
+  .menu-mobile__close {
+    position: absolute;
+    right: 50px;
+    top: 15px;
+  }
   .header {
     position: relative;
     z-index: 2;
@@ -38,14 +102,16 @@
     width: 294px;
     height: 294px;
   }
-  .pets__slider {
-    gap: 92px 20px;
-  }
+
   .arrow-right {
     right: 34%;
+    bottom: 50%;
+    transform: translateY(8%);
   }
   .arrow-left {
     left: 34%;
+    bottom: 50%;
+    transform: translateY(8%);
   }
   .pets {
     padding-bottom: 140px;
@@ -63,10 +129,32 @@
     padding-bottom: 140px;
   }
   .testimonials__item {
-    width: 33.3%;
+    width: 31.17%;
   }
-  .testimonials__item:nth-child(1) {
+}
+
+@media (max-width: 918px) {
+  .favorite__bcg-circle {
+    left: 300px;
+    width: 300px;
+    height: 300px;
+  }
+
+  .pets-slider {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .pets-slider__item:nth-child(1),
+  .pets-slider__item:nth-child(2) {
     display: none;
+  }
+
+  .widget-card,
+  .widget-payment,
+  .widget-result {
+    width: 130px;
+  }
+  .backstage__info-title {
+    font-size: 24px;
   }
 }
 
@@ -177,6 +265,11 @@
   .pets {
     overflow-x: hidden;
   }
+
+  .slider-item__img {
+    width: 280px;
+  }
+
   .how-it-works__title {
     font-size: 42px;
   }
@@ -282,7 +375,7 @@
   }
 }
 
-@media (max-width: 321px) {
+@media (max-width: 543px) {
   .favorite {
     overflow: hidden;
     background-image: url("./assets/images/media/Giant-Panda.png");
@@ -342,8 +435,7 @@
     padding-bottom: 60px;
   }
   .pets .container {
-    width: 285px;
-    margin: 0;
+    margin: 0 auto;
   }
   .slider-item {
     width: 285px;
