--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -723,7 +723,7 @@
   display: none;
 }
 .popup-close {
-  display: none;
+  opacity: 0;
   position: absolute;
   font-size: 22px;
   line-height: 22px;
@@ -732,13 +732,16 @@
   top: 3%;
   right: 5%;
   z-index: 1000;
+  background-color: transparent;
+  outline: none;
+  border: none;
 }
 .popup-overlay {
-  display: none;
+  display: block;
   position: fixed;
   width: 100%;
   height: 100%;
-  top: 0;
+  top: -1000px;
   left: 0;
   background-color: rgba(245, 247, 246, 0.7);
   margin: auto;
