--- a/online-zoo/style.css
+++ b/online-zoo/style.css
@@ -283,7 +283,7 @@
 
 .pets-slider__arrow {
   position: absolute;
-  transform: translateY(50%);
+  transform: translateY(-50%);
 }
 
 .pets-slider__arrow:hover {
@@ -736,14 +736,20 @@
   outline: none;
   border: none;
 }
+
 .popup-overlay {
   display: block;
   position: fixed;
   width: 100%;
   height: 100%;
   top: -1000px;
-  left: 0;
   background-color: rgba(245, 247, 246, 0.7);
   margin: auto;
   z-index: 12;
+  transition: all 0.2s;
+  animation: fadeIn 3s;
+}
+
+.show {
+  top: 0;
 }
