--- a/codejam2022Q3/src/style/_style.scss
+++ b/codejam2022Q3/src/style/_style.scss
@@ -1,59 +1,55 @@
-// body,
-// html {
-//     font: 16px/1.4 ro, serif;
-// }
+ //body,
+ //html {
+ //    transition: all 2s;
+ //}
 
-.container {
+.gem-puzzle {
   max-width: 400px;
+  height: 400px;
   padding: 2rem;
   margin: 0 auto;
   text-align: center;
   user-select: none;
 }
 
-.start-button {
-  margin: 0 auto;
-  text-transform: uppercase;
-  margin-bottom: 0.5rem;
-  border-radius: 15px;
+.puzzle-game__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
-// h1 {
-//     font 2rem/1.2 Georgia serif
-//     margin-bottom 1em
-// }
-
-.puzzle {
+.puzzle-game {
+  display: grid;
+  //grid-template-columns: repeat(4, 1fr);
   width: 100%;
-  padding-bottom: 100%;
+  height: 100%;
   background: #e5d6f6;
   margin-bottom: 1.2em;
-  position: relative;
-  &__info {
-    display: flex;
-    justify-content: space-around;
-    font: 1.5rem/1.2 Georgia serif;
-    margin-bottom: 0.5rem;
-  }
-  .item {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 25%;
-    height: 25%;
-    margin: 0;
-    border: 0;
-    background: plum;
-    color: white;
-    font-size: 2rem;
-    cursor: pointer;
-    padding: 0;
-    transition: transform 0.3s;
-    border: 1px solid purple;
+}
+
+.puzzle-game__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin:0 -1px -1px 0;
+  padding: 0;
+  background: plum;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  //transition: transform 0.3s;
+  border: 1px solid purple;
+  //transition: 0.5s background ease;
+
+  &.is-empty {
+    color: transparent;
+    background-color: transparent;
+    cursor: default;
   }
 }
 
-.button {
+.reset-btn {
   color: white;
   background: black;
   font: 1.2rem/1.2 Georgia serif;
