--- a/codejam2022Q3/src/style/_style.scss
+++ b/codejam2022Q3/src/style/_style.scss
@@ -1,7 +1,6 @@
- //body,
- //html {
- //    transition: all 2s;
- //}
+* {
+  box-sizing: border-box;
+}
 
 .gem-puzzle {
   max-width: 400px;
@@ -20,31 +19,33 @@
 }
 
 .puzzle-game {
-  display: grid;
-  //grid-template-columns: repeat(4, 1fr);
+  position: relative;
+  display: block;
   width: 100%;
   height: 100%;
   background: #e5d6f6;
-  margin-bottom: 1.2em;
 }
 
 .puzzle-game__item {
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin:0 -1px -1px 0;
+  width: 25%;
+  height: 25%;
   padding: 0;
   background: plum;
   color: white;
-  font-size: 2rem;
+  font-size: 1.2em;
   cursor: pointer;
-  //transition: transform 0.3s;
   border: 1px solid purple;
-  //transition: 0.5s background ease;
+  transition: transform 0.3s;
 
   &.is-empty {
     color: transparent;
     background-color: transparent;
+    outline: 0;
+    border: none;
     cursor: default;
   }
 }
