--- a/codejam2022Q3/src/style/_results-popup.scss
+++ b/codejam2022Q3/src/style/_results-popup.scss
@@ -1,22 +1,27 @@
 results-popup {
   position: absolute;
-  backdrop-filter: blur(3px);
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  left: 0;
-  // top: -100%;
-  // opacity: 0;
-  transition: all 0.3s ease-in;
-  &::part(size) {
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  display: none;
+
+  &::part(popup) {
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    padding: 20px;
+    overflow: hidden;
   }
+
   &::part(popup-list) {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 4%;
   }
+
   &::part(popup-item) {
-    border-bottom: 1px solid #000;
+    display: grid;
+    grid-template-columns: 1fr 1fr 3fr;
+    padding-top: 10px;
+    border-bottom: 1px solid black;
   }
 }
