--- a/codejam2022Q3/src/index.scss
+++ b/codejam2022Q3/src/index.scss
@@ -1,5 +1,5 @@
-@import 'libs/normalize';
-@import 'style/fonts';
-@import 'style/var';
-@import 'style/style';
-@import 'style/results-popup';
+@import "libs/normalize";
+@import "style/fonts";
+@import "style/var";
+@import "style/style";
+@import "style/popup";
