--- a/songbird/src/scss/blocks/quiz/_quiz.scss
+++ b/songbird/src/scss/blocks/quiz/_quiz.scss
@@ -51,6 +51,18 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem;
+    position: relative;
+  }
+
+  &__score {
+    position: absolute;
+    right: 0;
+    top: 0;
+    @include adaptive-value('font-size', 24, 12);
+
+    @include media(500px) {
+      position: relative;
+    }
   }
 
   &__progress-bar-wrapper {
@@ -73,6 +85,7 @@
     position: relative;
     aspect-ratio: 1/1;
     cursor: pointer;
+    transition: all 0.5s ease-in-out;
 
     span {
       @include adaptive-value('font-size', 24, 12);
@@ -96,8 +109,14 @@
   margin-bottom: 2rem;
 
   &__answers {
-    min-width: 50%;
     @include adaptive-value('font-size', 24, 12);
+    min-width: 50%;
+    transition: all 0.5s ease-in-out;
+
+    &.disabled {
+      opacity: 0.4;
+      pointer-events: none;
+    }
   }
 
   &__answer label {
@@ -115,6 +134,19 @@
     border-radius: 0.7rem;
     margin-bottom: 0.5rem;
 
+    &:hover {
+      background: rgb(6, 172, 6);
+    }
+
+    &.wrong {
+      background: red;
+      border: 1px solid red;
+    }
+
+    &.correct {
+      background: green;
+    }
+
     & input[type='radio'] {
       display: none;
     }
@@ -122,5 +154,7 @@
 
   &__text {
     @include adaptive-value('font-size', 24, 12);
+    @include adaptive-value('line-height', 50, 12);
+    text-align: left;
   }
 }
