fix: fixed indication of active stage

--- a/songbird/src/scss/blocks/quiz/_quiz.scss
+++ b/songbird/src/scss/blocks/quiz/_quiz.scss
@@ -10,6 +10,11 @@
 
   .active {
     background: green;
+    pointer-events: none;
+  }
+
+  .current {
+    background-color: green;
   }
 
   &__stage {
@@ -24,11 +29,15 @@
     }
 
     &:hover {
-      background: rgb(40, 239, 123);
+      background: green;
     }
     &:nth-child(1) {
       border-top-left-radius: 0.5rem;
       border-bottom-left-radius: 0.5rem;
+    }
+    &:nth-child(6) {
+      border-top-right-radius: 0.5rem;
+      border-bottom-right-radius: 0.5rem;
     }
   }
 }
