--- a/songbird/src/scss/style.scss
+++ b/songbird/src/scss/style.scss
@@ -7,6 +7,8 @@
 // BLOCKS
 @import './blocks/main-page/header/header';
 @import './blocks/quiz/quiz';
+@import './blocks/footer/footer';
+@import './blocks/main-page/main';
 
 body {
   font-family: CormorantUpright;
